Added in support for exporting headers

--- a/example.html
+++ b/example.html
@@ -14,7 +14,7 @@
         <div id="editor">
         </div>
         <button id="updatehtml">update</button><br/>
-        <div id="output"></span>
+        <div id="output"></div></span>
         <script>
             var quill = new Quill('#editor', {
                 theme: 'snow',
