Added more options on example page for testing, and fixed bugs where images would not get added to the output

--- a/example.html
+++ b/example.html
@@ -16,10 +16,31 @@
         <button id="updatehtml">update</button><br/>
         <div id="output"></div></span>
         <script>
+            var toolbarOptions = [
+                ['bold', 'italic', 'underline', 'strike'],
+                ['blockquote', 'code-block'],
+
+                [{ 'header': 1 }, { 'header': 2 }],
+                [{ 'list': 'ordered'}, { 'list': 'bullet' }],
+                [{ 'script': 'sub'}, { 'script': 'super' }],
+                [{ 'indent': '-1'}, { 'indent': '+1' }],
+                [{ 'direction': 'rtl' }],
+
+                [{ 'size': ['small', false, 'large', 'huge'] }],
+                [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
+                [ 'link', 'image', 'video', 'formula' ],
+                [{ 'color': [] }, { 'background': [] }],
+                [{ 'font': [] }],
+                [{ 'align': [] }],
+
+                ['clean']
+            ]
+
             var quill = new Quill('#editor', {
                 theme: 'snow',
                 modules: {
-                    formula: true
+                    formula: true,
+                    toolbar: toolbarOptions
                 }
             });
             document.getElementById("updatehtml").onclick = function() {
