Added in support for superscript and subscript

--- a/example.html
+++ b/example.html
@@ -20,7 +20,8 @@
                 ['bold', 'italic', 'underline', 'strike'],
 
                 [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
-                ['formula']
+                [{ 'script': 'sub'}, { 'script': 'super' }],
+                ['formula','image']
             ]
 
             var quill = new Quill('#editor', {
