--- a/example.html
+++ b/example.html
@@ -18,6 +18,7 @@
         <script>
             var toolbarOptions = [
                 ['bold', 'italic', 'underline', 'strike'],
+                ['code-block'],
 
                 [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
                 [{ 'script': 'sub'}, { 'script': 'super' }],
